@@ -1,5 +1,7 @@
 2009-01-15  higepon  <higepon@users.sourceforge.jp>
 
+        * ObjectTest.cpp: Added for testing "Base system" of Mosh.
+
         * Makefile.am (test): Renamed some tests.
           (nobase_data_DATA): Added pp.ss to installed files.
 
